fix(css): contrast on parts of codeblock

--- a/themes/chameleon/source/css/_source.css
+++ b/themes/chameleon/source/css/_source.css
@@ -550,7 +550,7 @@ td {
 
 .hljs-number,
 .hljs-class {
-  color: #B8D7A3;
+  color: #689E44;
 }
 
 .hljs-string,
@@ -568,7 +568,7 @@ td {
 .hljs-title,
 .hljs-params,
 .hljs-formula {
-  color: #DCDCDC;
+  color: #808080;
 }
 
 .hljs-comment,
