--- a/themes/chameleon/source/css/chameleon.css
+++ b/themes/chameleon/source/css/chameleon.css
@@ -1021,7 +1021,7 @@ td {
 
 .hljs-number,
 .hljs-class {
-  color: #B8D7A3;
+  color: #689E44;
 }
 
 .hljs-string,
@@ -1039,7 +1039,7 @@ td {
 .hljs-title,
 .hljs-params,
 .hljs-formula {
-  color: #DCDCDC;
+  color: #808080;
 }
 
 .hljs-comment,
